Att Second Project

--- a/Single price grid component | Challenger 02/index.html
+++ b/Single price grid component | Challenger 02/index.html
@@ -12,7 +12,10 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"> 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Frontend Mentor | Single Price Grid Component</title>
   </head>
@@ -24,30 +27,35 @@
           <h3>30-day, hassle-free money back guarantee</h3>
           <p>
             Gain access to our full library of tutorials along with expert code
-            reviews. Perfect for any developers who are serious about honing their
-            skills.
+            reviews. Perfect for any developers who are serious about honing
+            their skills.
           </p>
         </div>
-        <div class="leftContent"></div>
-        <div class="rightContent"></div>
+        <div class="leftContent">
+          <h3>Monthly Subscription</h3>
+          <div class="rowLeftContent">
+            <h1>&dollar;29</h1>
+            <p>per month</p>
+          </div>
+          <p>Full access for less than &dollar;1 a day</p>
+
+          <button>Sign Up</button>
+        </div>
+        <div class="rightContent">
+          <h3>Why Us</h3>
+          <p>Tutorials by industry experts</p>
+          <p>Peer &amp; expert code review</p>
+          <p>Coding exercises</p>
+          <p>Access to our GitHub repos</p>
+          <p>Community forum</p>
+          <p>Flashcard decks</p>
+          <p>New videos every week</p>
+        </div>
       </div>
     </div>
     <!--
 
-  <h3>Join our community</h3>
-        <h4>30-day, hassle-free money back guarantee</h4>
-        <p>
-          Gain access to our full library of tutorials along with expert code
-          reviews. Perfect for any developers who are serious about honing their
-          skills.
-        </p>
-
-
-    &dollar;29 per month Full access for less than
-    &dollar;1 a day Sign Up Why Us Tutorials by industry experts Peer &amp;
-    expert code review Coding exercises Access to our GitHub repos Community
-    forum Flashcard decks New videos every week
-
+  
     
   <footer>
     <p class="attribution">
