Finish second challenger | update readme

--- a/Single price grid component | Challenger 02/index.html
+++ b/Single price grid component | Challenger 02/index.html
@@ -39,7 +39,7 @@
           </div>
           <p>Full access for less than &dollar;1 a day</p>
 
-          <button>Sign Up</button>
+          <button class="btnSignUp">Sign Up</button>
         </div>
         <div class="rightContent">
           <h3>Why Us</h3>
