--- a/Fylo Data Storage Component | Challenger 03/index.html
+++ b/Fylo Data Storage Component | Challenger 03/index.html
@@ -24,11 +24,13 @@
         <img src="./images/icon-upload.svg" alt="">
       </div>
     </div>
+
     <div class="content">
       <p>You’ve used 815 GB of your storage</p>
-      
-      <!--185 GB Left -->
-      <div class="progressBar">
+    
+      <div class="progressBar tooltip">
+        <span class="tooltiptext">
+          <h1>183</h1>GB left</span>
         <div class="progressBar-inter">
           <div class="progressBar-ball"></div>
         </div>
@@ -36,7 +38,12 @@
       <div class="storage">
         <div>0GB</div><div>1000GB</div>
       </div>
+
+      <div class="tooltip-externo">
+        <h1>183</h1>GB left</span>
+
     </div>
+  </div>
   </div>
   <!--
   <div class="attribution">
