--- a/Fylo Data Storage Component | Challenger 03/index.html
+++ b/Fylo Data Storage Component | Challenger 03/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
@@ -19,9 +19,9 @@
     <div class="iconActions">
       <img id="iconLogo" src="./images/logo.svg" alt="">
       <div class="icons">
-        <img src="./images/icon-document.svg" alt="">
-        <img src="./images/icon-folder.svg" alt="">
-        <img src="./images/icon-upload.svg" alt="">
+        <input type="button" class="botao btn1">
+        <input type="button" class="botao btn2">
+        <input type="button" class="botao btn3">
       </div>
     </div>
 
@@ -30,7 +30,7 @@
     
       <div class="progressBar tooltip">
         <span class="tooltiptext">
-          <h1>183</h1>GB left</span>
+          <h1>185</h1>GB left</span>
         <div class="progressBar-inter">
           <div class="progressBar-ball"></div>
         </div>
@@ -40,7 +40,7 @@
       </div>
 
       <div class="tooltip-externo">
-        <h1>183</h1>GB left</span>
+        <h1>185</h1>GB left</span>
 
     </div>
   </div>
