--- a/Fylo Data Storage Component | Challenger 03/index.html
+++ b/Fylo Data Storage Component | Challenger 03/index.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Frontend Mentor | Fylo data storage component</title>
 
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <div class="iconActions">
-      <img id="iconLogo" src="./images/logo.svg" alt="">
+      <img id="iconLogo" src="./images/logo.svg" alt="iconLogo">
       <div class="icons">
         <input type="button" class="botao btn1">
         <input type="button" class="botao btn2">
