--- a/Social Proof Section | Challenger 05/index.html
+++ b/Social Proof Section | Challenger 05/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <div class="first-row">
-        <div class="first-row">
+        <div>
           10,000+ of our users love our products. We only provide great products
           combined with excellent customer service. See what our satisfied
           customers are saying about our services.
@@ -30,9 +30,16 @@
 
       <div class="second-row">
         <div class="card">
-          Colton Smith Verified Buyer "We needed the same printed design as the
-          one we had ordered a week prior. Not only did they find the original
-          order, but we also received it in time. Excellent!"
+          <div class="cardFirstRow">
+            <img src="./images/image-colton.jpg" alt="perfil colton">
+            <p><strong>Colton Smith</strong><br>Verified Buyer</p>
+          </div>
+          <div class="cardSecondRow">
+            <p>"We needed the same printed design as the
+              one we had ordered a week prior. Not only did they find the original
+              order, but we also received it in time. Excellent!"</p>
+          </div>
+            
         </div>
 
         <div class="card">
