--- a/Challenger06_intro_component_with_signup_form/index.html
+++ b/Challenger06_intro_component_with_signup_form/index.html
@@ -37,13 +37,13 @@
       </div>
       <div class="formSignUp">
 
-        <input type="text" placeholder="First Name">
-        <input type="text" placeholder="Last Name">
-        <input type="text" placeholder="Email Address">
-        <input type="text" placeholder="Password">
-        <button>Claim your free trial</button>
+        <input class="inputForm" type="text" placeholder="First Name">
+        <input class="inputForm" type="text" placeholder="Last Name">
+        <input class="inputForm" type="text" placeholder="Email Address">
+        <input class="inputForm" type="text" placeholder="Password">
+        <button class="buttonSubmit">Claim your free trial</button>
         <p>
-        By clicking the button, you are agreeing to our Terms and Services
+        By clicking the button, you are agreeing to our <strong>Terms and Services</strong>
         </p>
 
 
