--- a/Challenger06_intro_component_with_signup_form/index.html
+++ b/Challenger06_intro_component_with_signup_form/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
@@ -36,15 +35,15 @@
 
       </div>
       <div class="formSignUp">
-
-        <input class="inputForm" type="text" placeholder="First Name">
-        <input class="inputForm" type="text" placeholder="Last Name">
-        <input class="inputForm" onblur="validarEmail()" id="email" type="emai" placeholder="Email Address">
-        <input class="inputForm" type="password" placeholder="Password">
-        <button class="buttonSubmit" id="buttonSubmit">Claim your free trial</button>
-        <p>
-        By clicking the button, you are agreeing to our <strong>Terms and Services</strong>
-        </p>
+        <form action="#" method="post">
+          <input class="inputForm" type="text" placeholder="First Name">
+          <input class="inputForm" type="text" placeholder="Last Name">
+          <input class="inputForm" id="email" type="email" placeholder="Email Address">
+          <input class="inputForm" type="password" placeholder="Password">
+          <button class="buttonSubmit" id="buttonSubmit" type="submit">Claim your free trial</button>
+          <p>By clicking the button, you are agreeing to our <strong>Terms and Services</strong></p>
+        </form>
+        
 
 
      
