--- a/Challenger07_social_media_dashboard_with_theme_switcher/index.html
+++ b/Challenger07_social_media_dashboard_with_theme_switcher/index.html
@@ -15,39 +15,48 @@
   </style>
 </head>
 <body>
+  <div class="container">
 
-  Social Media Dashboard
-  Total Followers: 23,004
+  <div class="headerDiv">
+    <h2>
+      Social Media Dashboard
+    </h2>
+    <p>
+      Total Followers: 23,004
+    </p>
+    Dark Mode
+    <button>Lua</button>
+  </div>
 
-  Dark Mode
+  <div class="socialMedia">
+    <div class="cardSocialMedia">
+      <span>@nathanf</span>
+      <h1>1987</h1>
+      <h3>Followers</h3>
+      <p>12 Today</p>
+    </div>
 
-  
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
-
+    <div class="cardSocialMedia">
+      <span>@nathanf</span>
+      <h1>1987</h1>
+      <h3>Followers</h3>
+      <p>12 Today</p>
+    </div>
 
 
-  Overview - Today
+  </div>
 
-  Page Views
+  <h2>Overview - Today</h2>
+
+  <div class="overview">
+
+    <div class="cardOverview">
+      <div class="lineUp">
+        <p>Page Views</p>
+      </div>
+      
+    </div>
+    Page Views
   87
   3%
 
@@ -78,6 +87,21 @@
   Total Views
   1407
   12%
+  </div>
+
+</div>
+
+  
+
+  
+
+
+
+
+
+  
+
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
