--- a/Challenger08_preview_card_component/index.html
+++ b/Challenger08_preview_card_component/index.html
@@ -33,7 +33,7 @@
 			  </div>
 			  <div class="data">
 				<h2>314</h2>
-				<spam>TEMPLATE</spam>
+				<spam>TEMPLATES</spam>
 			</div>
 			<div class="data">
 				<h2>12M+</h2>
